--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,35 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
+  "description": "original starter code",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "npx nodemon"
+    "start": "npx nodemon ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "prisma": "^5.4.2"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.8.4",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  }
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/node": "^20.19.10",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexandraIllner/recipes-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlexandraIllner/recipes-app/issues"
+  },
+  "homepage": "https://github.com/AlexandraIllner/recipes-app#readme"
 }
